main/common/manifests/kube_list/kongingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin
  namespace: kong
spec:
  ingressClassName: nginx
  rules:
    - host: "kongadm.192.168.0.2.nip.io"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-kong-admin
                port:
                  number: 8001
    - host: "kongmgr.192.168.0.2.nip.io"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-kong-manager
                port:
                  number: 8002
    - host: "kongproxy.192.168.0.2.nip.io"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-kong-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - kongproxy.192.168.0.2.nip.io"
        - kongadm.192.168.0.2.nip.io"
        - kongmgr.192.168.0.2.nip.io"
